ARTEMIS-2342 Use a URL instead of a URI for the logging.configuration property. The property the log manager itself expects is a URL which could result in an invalid URI missing the // prefix after file:.